--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Horizon",
+        "label": "Horizon - Zomatree",
         "uiTheme": "vs-dark",
         "path": "./themes/horizon.json"
       }
